Fixed an issue where the scrollbar would cover page content

--- a/src/ResourcesPage/FilterBar/FilterBar.module.css
+++ b/src/ResourcesPage/FilterBar/FilterBar.module.css
@@ -30,5 +30,7 @@
 }
 
 .inactive {
-    
+    /* This makes it seem like the filter option is disabled!
+    color: #9797a0;
+    */
 }
