--- a/src/SinglePageApp/index.module.css
+++ b/src/SinglePageApp/index.module.css
@@ -18,7 +18,8 @@
 }
 
 .content {
-    padding: 5px;
-    top: -45px;
+    top: -35px;
     position: relative;
+
+    padding: 0px 25px 0px 25px;
 }
